fix cors origin pattern